dist/1.0/bin/sample/retrieveUnpackaged/objects/Project_cost__c.object
<CustomObject>
    <description>Solution base</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project costs</relationshipLabel>
        <relationshipName>Project_costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_lenght__c</fullName>
        <label>Contract lenght</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS_Local__c</fullName>
        <label>IS / Local</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project costs</relationshipLabel>
        <relationshipName>Project_costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Real__c</fullName>
        <label>Real</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_description__c</fullName>
        <label>Short description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status_disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Project costs</relationshipLabel>
        <relationshipName>Project_costs2Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User2Kam__c</fullName>
        <label>KAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User2PM__c</fullName>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>TEXT(1)+&apos;.&apos;+TEXT(0)</defaultValue>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Project cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IS_Local__c</columns>
        <columns>Account__c</columns>
        <columns>Contract_lenght__c</columns>
        <columns>Short_description__c</columns>
        <columns>Version__c</columns>
        <columns>User2Kam__c</columns>
        <columns>User2PM__c</columns>
        <columns>Task__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC{000000000}</displayFormat>
        <label>Name project cost</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Account__c )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KAM</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(   User2Kam__c )</errorConditionFormula>
        <errorDisplayField>User2Kam__c</errorDisplayField>
        <errorMessage>KAM can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PM</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(    User2PM__c )</errorConditionFormula>
        <errorDisplayField>User2PM__c</errorDisplayField>
        <errorMessage>PM can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Task</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Task__c)</errorConditionFormula>
        <errorDisplayField>Task__c</errorDisplayField>
        <errorMessage>Task can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Version_validation</fullName>
        <active>true</active>
        <description>Check if version is numeric value (required because we must use . as decimal separator)</description>
        <errorConditionFormula>!REGEX(Version__c  , &quot;[0-9]*\\.?[0-9]+&quot;) || ( BEGINS(Version__c, &apos;0&apos;) &amp;&amp; !BEGINS(Version__c, &apos;0.&apos;) )</errorConditionFormula>
        <errorDisplayField>Version__c</errorDisplayField>
        <errorMessage>Version field must be a numeric value with . as decimal separator. (Example: 1.1)</errorMessage>
    </validationRules>
</CustomObject>